ipython (0.10.1-1) unstable; urgency=low

  * New upstream release.

 -- Bernd Zeimetz <bzed@debian.org>  Sun, 25 Apr 2010 15:10:11 +0200

ipython (0.10-2) unstable; urgency=low

  [ Sandro Tosi ]
  * debian/control
    - removed Ondrej from Uploaders: thanks for your work!

  [ Jakub Wilk ]
  * Fix watch file.

  [ Bernd Zeimetz ]
  * Upload to ship ipython2.6 instead of ipython2.4.

 -- Bernd Zeimetz <bzed@debian.org>  Sun, 25 Apr 2010 14:53:21 +0200

ipython (0.10-1) unstable; urgency=medium

  [ Bernd Zeimetz ]
  * New upstream version.

  [ Stefano Zacchiroli ]
  * debian/control: fix (build)deps on python-zope-interface, new package
    name is python-zope.interface (Closes: #543128)

  [ Piotr Ożarowski ]
  * Standards-Version bumped to 3.8.3
    - debian/README.source file added

 -- Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>  Mon, 07 Sep 2009 20:37:17 +0200

ipython (0.9.1-3) unstable; urgency=low

  [ Stephan Peijnik ]
  * Fixed broken Suggest on libjs-jquery (typo, was: libjs-query).

  [ Emilio Pozuelo Monfort ]
  * debian/rules: remove chmod calls, they are not needed and are
    modifying files in pysupport's directories which may change.
    Closes: #516274.

 -- Stephan Peijnik <debian@sp.or.at>  Thu, 19 Feb 2009 07:32:37 +0100

ipython (0.9.1-2) unstable; urgency=low

  * Upload to unstable.

 -- Stephan Peijnik <debian@sp.or.at>  Mon, 16 Feb 2009 07:55:45 +0100

ipython (0.9.1-1) experimental; urgency=low

  [ Stephan Peijnik ]
  * New upstream release (Closes: #500556).
  * Cleaned up debian/ because the upstream tarball is clean since 0.8.4-1:
    - Removed debian/uscan-dfsg-clean.sh.
    - Removed debian/README.Debian-source.
    - Updated debian/watch.
  * Removed debian/patches/05_fix_path_import.dpatch - fixed upstream.
  * Added myself to Uploaders.
  * Switched from dpatch to quilt patch system.
  * Added debian/patches/06_ipythonwx_importerror.patch.