@@ -3,12 +3,12 @@ Section: python
 Priority: optional
 Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Uploaders: Bernd Zeimetz <bzed@debian.org>, Stephan Peijnik <debian@sp.or.at>
-Build-Depends: debhelper (>= 5.0.37.2), cdbs (>= 0.4.43), python, python-support (>= 0.4), quilt (>= 0.46-5)
+Build-Depends: debhelper (>= 7.3.13), python, quilt (>= 0.46-5)
 Build-Depends-Indep: python-sphinx, python-pygments, python-foolscap, python-openssl (>= 0.6), python-nose, python-twisted-core, python-zope.interface, python-pexpect, python (>= 2.5) | python-ctypes
 Homepage: http://ipython.scipy.org/
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/ipython/trunk/
 Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/ipython/trunk/
-Standards-Version: 3.8.3
+Standards-Version: 3.9.1
 DM-Upload-Allowed: yes
 
 Package: ipython
@@ -18,6 +18,7 @@ Conflicts: python2.3-ipython, python2.4-ipython, ipython-common
 Replaces: python2.3-ipython, python2.4-ipython, ipython-common
 Suggests: python-profiler, python-numpy, python-matplotlib, libjs-jquery, python-gobject, python-gtk2, python-qt3 | python-qt4
 Recommends: python-wxgtk2.8, global, python-openssl (>= 0.6), python (>= 2.5) | python-ctypes, python-foolscap, python-zope.interface, python-twisted-core
+Breaks: ${python:Breaks}
 Description: enhanced interactive Python shell
  IPython can be used as a replacement for the standard Python shell,
  or it can be used as a complete working environment for scientific
